# myopengl

./: CMakeLists.txt  Main.cpp  Shader.h
assets/: 3.3.shader.fs  3.3.shader.vs  4.1.texture.fs
dep/glad/: CMakeLists.txt
dep/glad/include/glad/: glad.h
dep/glad/src/: glad.c
